Fixing navbar and hover on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --bodybg-color: #fbfbfb;
+  --bodybg-color: rgb(251, 251, 251);
   --brand-color: #bb1b1f;
   --navbg-color: #f8fcff;
   --text-color: #c31628;
@@ -35,6 +35,7 @@ body {
 header {
   border-radius: 5px;
   overflow: hidden;
+  margin-top: 70px;
 }
 .header {
   border-radius: 10px;
@@ -92,15 +93,21 @@ nav {
   grid-template-columns: 1fr 2fr;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--navbg-color);
+  background-color: rgba(251, 251, 251, 0.7);
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
   border-radius: 50px;
   padding: 10px;
   order: -1;
-  margin-bottom: 20px;
+  margin-top: 15px;
+  position: fixed;
+  top: 0;
+  left: 50px;
+  right: 50px;
+  z-index: 1;
 }
 
 nav .brand-name {
+  /* grid-area: brand-name; */
   font-family: 'Pacifico', serif;
   font-size: 28px;
   color: var(--brand-color);
@@ -128,6 +135,7 @@ nav .brand-name {
 /* hamburger menu start*/
 
 .menu-toggle {
+  grid-area: hamburger;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -358,8 +366,13 @@ footer .text span {
 /* responsive breakpoint */
 @media screen and (max-width: 1024px) {
   nav {
+    position: sticky;
     order: inherit;
     grid-template-columns: 1fr;
+  }
+
+  header {
+    margin-top: 0;
   }
 
   .brand-name {
@@ -382,19 +395,35 @@ footer .text span {
     flex-direction: column;
     text-shadow: 0 0 3px rgba(0, 0, 0, 0.7);
   }
+
+  .info {
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  header {
+    margin-top: 80px;
+  }
+
   nav {
+    position: fixed;
     order: -1;
-    grid-template-columns: 1fr 2.3fr;
+    grid-template-areas: 'brand-name hamburger';
   }
 
   nav .brand-name {
     display: flex;
+    grid-area: brand-name;
+    justify-content: center;
   }
   .menu-toggle {
     display: flex;
+  }
+
+  .menu-toggle:has(input:checked) {
+    margin-left: -75px;
+    margin-top: 10px;
   }
 
   .menu-toggle input:checked ~ span {
@@ -403,6 +432,13 @@ footer .text span {
 
   body:has(.menu-toggle input:checked) {
     overflow: hidden;
+  }
+
+  nav:has(.menu-toggle input:checked) {
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-top: 0;
   }
 
   .menu-list {
@@ -425,6 +461,15 @@ footer .text span {
     opacity: 1;
     transform: translateY(0);
   }
+
+  .info {
+    display: none;
+  }
+
+  .show-details {
+    opacity: 1;
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -433,6 +478,19 @@ footer .text span {
       'hero'
       'feature-1'
       'feature-2';
+  }
+
+  nav .brand-name {
+    justify-content: center;
+  }
+
+  .info {
+    display: none;
+  }
+
+  .show-details {
+    opacity: 1;
+    display: flex;
   }
 
   body {
